# GameForge2026

./: .gitignore  Cargo.toml  README.md  play-windows.sh  run.sh  save.ron
assets/audio/: sounds.tar.xz
assets/sprites/: jardinier.png.kra  jardinier.png.kra-autosave.kra  jardinier.png~
assets/sprites/Armes/Left/Mid range/: chainsaw 2.png~  chainsaw1.png~
assets/sprites/Armes/Right/Mid range/: Chainsaw 1.png~
assets/sprites/Armes/Right/Short range/: hache R.png~
assets/sprites/jardinier/: second-sprite-player.pngZone.Identifier
docs/: GDD.md
src/: audio.rs  augments.rs  biomes.rs  boss.rs  cabanon.rs  collectible.rs  common.rs  enemies.rs  healthbar.rs  main.rs  menu.rs  meta.rs  modifier.rs  player.rs  rooms.rs  speed.rs  stats.rs  terrasse.rs  ui.rs  weapons.rs
src/entities/: ennemies.rs  mod.rs  ui.rs
src/mobs/: ai.rs  bosses.rs  components.rs  mod.rs  spawn.rs
src/player/: dash.rs  mod.rs  weapons.rs
tools/: gen_bousier.py  gen_player.py
