[package]
name = "GameForge2026"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
# `wav` ajouté aux features par défaut : les SFX du jeu sont des .wav, et seul
# le décodeur Vorbis (ogg) est activé par défaut dans Bevy.
bevy = { version = "0.18.1", features = ["wav"] }
rand = "0.9"
serde = { version = "1", features = ["derive"] }
ron = "0.10"
